--- a/404.html
+++ b/404.html
@@ -6,12 +6,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Error 404</title>
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/404.css">
+	<link rel="stylesheet" type="text/css" href="/css/404.css">
 </head>
 <body translate="no" >
 	<div id="page">
@@ -22,7 +22,7 @@
 			<div id="details">
 				<div id="qr">
 					<div id="image">
-						<img src="img/qr.png" alt="QR Code" />
+						<img src="/images/qr.png" alt="QR Code" />
 					</div>
 				</div>
 				<div id="stopcode">
@@ -32,7 +32,7 @@
 			</div>
 		</div>
 	</div>
-	<script id="rendered-js" type="text/javascript", src="js/404.js"></script>
+	<script id="rendered-js" type="text/javascript", src="/js/404.js"></script>
 </body>
 </html>
 
