--- a/index.html
+++ b/index.html
@@ -1,11 +1,305 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>Mr.SAGE</title>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-<script>
-	window.location.replace("terminal/");
-</script>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Mr.SAGE</title>
+    <meta name="keywords" content="thehackingsage, Mr.SAGE, Hacktronian, Vipul Tiwari, Cyber Security, Training, Projects, Services"/>
+    <meta name="description" content="Security Enthusiast / Pentester / Developer"/>
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://thehackingsage.github.io">
+    <meta property="og:title" content="Mr.SAGE">
+    <meta property="og:description" content="Security Enthusiast / Pentester / Developer">
+    <meta property="og:image" content="images/metadata.png">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://thehackingsage.github.io">
+    <meta property="twitter:title" content="Mr.SAGE">
+    <meta property="twitter:description" content="Security Enthusiast / Pentester / Developer">
+    <meta property="twitter:image" content="images/metadata.png">
+
+    <!-- Mobile Specific Metas -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+
+	<!-- Favicons -->
+	<link rel="shortcut icon" href="images/favicon.ico">
+
+	<!-- CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+    <!-- Font -->
+    <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
+
+<body>
+
+	<div id="ht-tm-jumbotron">
+		<div class="jumbotron bg-transparent mb-0 radius-0">
+			<div class="container">
+				<div class="ht-tm-header">
+
+					<div class="row">
+						<div class="col-xl-12">
+							<h1 class="display-1" style="font-family: 'Source Code Pro', monospace;">Mr.SAG<span class="vim-caret">E</span></h1>
+							<div class="lead mb-3 text-mono text-success" style="font-family: 'Source Code Pro', monospace;">Security Enthusiast / Pentester / Developer</div>
+							<p class="mt-12 text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+								Hello, My name is Vipul and I'm a Cyber Security Researcher and Certified Ethical Hacker with an effective problem-solving mindset and a lifelong passion for cybersecurity and technology, I'm part of cybersecurity domain from last 4 years and have a great experience in different fields of information security such as penetration testing, security analysis, red teaming and social engineering. I have been entrusted for handling the Vulnerability Assessment & Penetration Testing activities for the organization as well as of client projects.
+							</p><br>
+							<div class="text-mono">
+								<a href="#!" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-download mr-2"></span> Resume.pdf</a>
+								<a href="terminal/" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-terminal mr-2"></span> Terminal</a>
+							</div>
+						</div>
+					</div>
+
+					<br><br>
+
+					<div class="row">
+						<div class="col-xl-12">
+							<h4 style="font-family: 'Source Code Pro', monospace;">What i do?</h4>
+							<p>
+								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+									<li>
+										Vulnerability Assessment
+									</li>
+									<li>
+										Penetration Testing
+									</li>
+									<li>
+										Cyber Security Training
+									</li>
+									<li>
+										Web Development
+									</li>
+								</ul>
+							</p>
+						</div>
+					</div>
+
+					<br><br>
+
+					<div class="row">
+						<div class="col-xl-12">
+							<h4 style="font-family: 'Source Code Pro', monospace;">Skills :</h4>
+
+							<p>
+								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+									<li>
+										Penetration Testing   
+									</li>
+									<li>
+										Linux Administration
+									</li>
+									<li>
+										Network Administration
+									</li>
+									<li>
+										Coding/Scripting : C, Python, Bash and PowerShell
+									</li>
+									<li>
+										Database : My SQL, SQLite, Microsoft SQL Server
+									</li>
+									<li>
+										Administration : Apache, SSH, Shell, Git, Virtualization
+									</li>
+									<li>
+										Operating System : Windows, Cent OS, Ubuntu, Arch Linux, Kali Linux
+									</li>
+									<li>
+										Language : Hindi, English
+									</li>
+									<li>
+										Tools : Nmap, Wireshark, Metasploit, BurpSuite, SQLMap, W3AF, OpenVAS, BeEF, Bloodhound, GDB, Social Engineer Toolkit etc.
+									</li>
+								</ul>
+							</p>
+						</div>
+					</div>
+
+					<br><br>
+
+					<div class="row">
+						<div class="col-xl-12">
+							<h4 style="font-family: 'Source Code Pro', monospace;">Experience :</h4>
+							<p>
+								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+									<li>
+										<b>Hacktronian (Founder, Lead Trainer)</b><br>
+										<a href="https://hacktronian.in" target="_blank">https://hacktronian.in</a> | Oct. 2020 - Present<br>
+										Hacktronian is an online training platform which mainly focuses on providing cybersecurity education and resources for free.
+									</li><br>
+									<li>
+										<b>SECARMY (Head of Operations & Projects)</b><br>
+										<a href="https://secarmy.org" target="_blank">https://secarmy.org</a> | Jan. 2019 - Oct. 2020<br>
+										SECARMY is an Indian origin agile and collective intelligence focused community full of enthusiasts from various diverse domains of information security striving their best to make a change through various open source activities like Capture The Flag (CTF), Podcasts, Blogs and various Sessions or Webcasts.
+									</li><br>
+									<li>
+										<b>Self-Employed (Freelancer)</b><br>
+										<a href="http://bit.ly/thehackingsage" target="_blank">bit.ly/thehackingsage</a> | Oct. 2016 - Present<br>
+										In 2016, I started working as a Freelancer in which I used to provide services related to Cyber Security (Security Audit, Vulnerability Assessment and Penetration Testing) & Web Development (Web Designing, Makeover and SEO).
+									</li>
+								</ul>
+							</p>
+						</div>
+					</div>
+
+					<br><br>
+
+					<div class="row">
+						<div class="col-xl-12">
+							<h4 style="font-family: 'Source Code Pro', monospace;">Certification :</h4>
+							<p>
+								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+									<li>
+										ICS-CISA : Operational Security for Control Systems, Differences in Deployments of ICS, Influence of Common IT Components on ICS, Common ICS Components, Cybersecurity within IT & ICS Domains, Cybersecurity Risk, Current Trends (Threat), Current Trends (Vulnerabilities), Determining the Impacts of a Cybersecurity Incident, Attack Methodologies in IT & ICS, Mapping IT Defense-in-Depth Security Solutions to ICS
+									</li><br>
+									<li>
+										OSINT Combine : National Missing Persons Hackathon OSINT Foundations Course, Trace Labs OSINT Foundations Course
+									</li><br>
+									<li>
+										Autopsy : Autopsy Basics and Hands On, Intro to DFIR : The Divide and Conquer Process
+									</li><br>
+									<li>
+										edX : Introduction to Linux, Fundamentals of Red Hat Enterprise Linux
+									</li><br>
+									<li>
+										Udemy : 50+ Cyber Security Certifications
+									</li><br>
+									<li>
+										Cybrary : Penetration Testing and Ethical Hacking, Advanced Penetration Testing, Comptia A Plus 901, CompTIA Network+, CompTIA Security+, CompTIA CySA+, Social Engineering and Manipulation, Risk Management Framework
+									</li><br>
+									<li>
+										Google : Fundamentals of Digital Marketing, Google Cloud Security Professional, Google IT Support Professional
+									</li><br>
+									<li>
+										EC-Council : Certified Ethical Hacker v10 (ECC1635847029)
+									</li><br>
+								</ul>
+							</p>
+						</div>
+					</div>
+
+					<br><br>
+
+					<div class="row">
+						<div class="col-xl-12">
+							<h4 style="font-family: 'Source Code Pro', monospace;">Education :</h4>
+							<p>
+								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+									<li>
+										 B.Sc. Mathematics : Dr. Ram Manohar Lohia Avadh University, Ayodhya (2013 - 2016)
+									</li>
+								</ul>
+							</p>
+						</div>
+					</div>
+
+					<br><br>
+
+					<div class="row">
+						<div class="col-xl-12">
+							<h4 style="font-family: 'Source Code Pro', monospace;">My Projects :</h4><br>
+							<div class="ht-tm-codeblock ht-tm-btn-replaceable ht-tm-needs-darkness">
+								<div class="row">
+									<div class="col-md-12">
+										<a href="https://github.com/thehackingsage/hacktronian" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Hacktronian</a>
+										<a href="https://github.com/thehackingsage/bughunter" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Bug Hunter</a>
+										<a href="https://github.com/thehackingsage/lightsaber" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Lightsaber</a>
+										<a href="https://github.com/thehackingsage/hackdroid" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Hackdroid</a>
+										<a href="https://github.com/thehackingsage/pwnphone" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Pwn Phone</a>
+										<a href="https://github.com/thehackingsage/hackpi" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Hack Pi</a>
+										<a href="https://github.com/thehackingsage/kali-wsl" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Kali WSL</a>
+										<a href="https://github.com/thehackingsage/torfi" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Tor Fi</a>
+									</div>
+								</div><br>
+								<p class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">Visit <a href="https://github.com/thehackingsage">https://github.com/thehackingsage</a> for More.</p>
+							</div>
+						</div>
+					</div>
+
+					<br><br>
+
+					<div class="row">
+						<div class="col-xl-12">
+							<h4 style="font-family: 'Source Code Pro', monospace;">Achievements :</h4>
+							<p>
+								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+									<li>Judge - National Missing Persons Hackathon Australia 2020</li>
+									<li>Digital Credential from the Cisco Networking Academy</li>
+									<li>Contributed in SECARMY Village 2020</li>
+									<li>Hacktoberfest 2020 Swag</li>
+									<li>Aerospace Workshops DEF CON Swag</li>
+									<li>Certificate of Appreciation : DEF CON Delhi 0x03 SAFE MODE</li>
+									<li>Contributed in SARCON : SECARMY Conference 2020</li>
+									<li>Certificate of Appreciation : LPU Cyber Hack Village 2.0</li>
+									<li>Bugcrowd Swag</li>
+									<li>Contributed in 20+ CTF Events</li>
+									<li>Bug Discover Swag</li>
+									<li>Participated in more than 50 Security Seminar and Conference</li>
+									<li>and much more...</li>
+								</ul>
+							</p>
+						</div>
+					</div>
+
+					<br><br>
+
+					<div class="row">
+						<div class="col-xl-12">
+							<h4 style="font-family: 'Source Code Pro', monospace;">Activities :</h4><br>
+							<div class="ht-tm-codeblock ht-tm-btn-replaceable ht-tm-needs-darkness">
+								<div class="row">
+									<div class="col-md-12">
+										<a href="https://www.hackthebox.eu/profile/38608" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cube mr-2"></span> Hack The Box</a>
+										<a href="https://tryhackme.com/p/mr.sage" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cloud mr-2"></span> TryHackMe</a>
+										<a href="https://thehacktronian.blogspot.com/" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-newspaper-o mr-2"></span> Blogger</a>
+										<a href="https://youtube.com/hacktronian" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-youtube mr-2"></span> YouTube</a>
+									</div>
+								</div><br>
+								<p class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">My Interests Are Mostly CTF and Web Designing.</p>
+							</div>
+						</div>
+					</div>
+
+					<br><br>
+
+					<div class="row">
+						<div class="col-xl-12">
+							<h4 style="font-family: 'Source Code Pro', monospace;">Contacts :</h4>
+							<p class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+								<span class="fa fa-phone mr-2"></span> Phone : <a href="tel:+919044264043" target="_blank">+919044264043</a><br>
+								<span class="fa fa-envelope-o mr-2"></span> Email : <a href="mailto:thehackingsage@protonmail.com" target="_blank">thehackingsage@protonmail.com</a><br>
+								<span class="fa fa-share-alt mr-2"></span> Social Links : <a href="https://allmylinks.com/thehackingsage" target="_blank">allmylinks.com/thehackingsage</a>
+							</p><br>
+							<p>
+								<a href="https://instagram.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-instagram"></span></a>
+								<a href="https://twitter.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-twitter"></span></a>
+								<a href="https://github.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-github"></span></a>
+								<a href="https://youtube.com/hacktronian?sub_confirmation=1" target="_blank" class="btn btn-outline-success"><span class="fa fa-youtube"></span></a>
+							</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>	
+
+	<div class="container py-5">
+		<p class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">© 2020 <a href="https://hacktronian.in" target="_blank">HACKTRONIAN</a></p>
+	</div>
+
+	<!-- Script -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+</body>
+
 </html>
