--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 										<a href="https://github.com/thehackingsage/torfi" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Tor Fi</a>
 									</div>
 								</div><br>
-								<p class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">Visit <a href="https://github.com/thehackingsage">https://github.com/thehackingsage</a> for More.</p>
+								<p class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">Visit <a href="https://github.com/thehackingsage" target="_blank">https://github.com/thehackingsage</a> for More.</p>
 							</div>
 						</div>
 					</div>
@@ -241,8 +241,8 @@
 									<li>Bugcrowd Swag</li>
 									<li>Contributed in 20+ CTF Events</li>
 									<li>Bug Discover Swag</li>
-									<li>Participated in more than 50 Security Seminar and Conference</li>
-									<li>and much more...</li>
+									<li>Participated in more than 50 Security Seminar and Conference<br>
+									and much more...</li>
 								</ul>
 							</p>
 						</div>
@@ -278,9 +278,9 @@
 								<span class="fa fa-share-alt mr-2"></span> Social Links : <a href="https://allmylinks.com/thehackingsage" target="_blank">allmylinks.com/thehackingsage</a>
 							</p><br>
 							<p>
-								<a href="https://instagram.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-instagram"></span></a>
-								<a href="https://twitter.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-twitter"></span></a>
-								<a href="https://github.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-github"></span></a>
+								<a href="https://instagram.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-instagram"></span></a> &nbsp; &nbsp;
+								<a href="https://twitter.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-twitter"></span></a> &nbsp; &nbsp;
+								<a href="https://github.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-github"></span></a> &nbsp; &nbsp;
 								<a href="https://youtube.com/hacktronian?sub_confirmation=1" target="_blank" class="btn btn-outline-success"><span class="fa fa-youtube"></span></a>
 							</p>
 						</div>
