--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 								Hello, My name is Vipul and I'm a Cyber Security Researcher and Certified Ethical Hacker with an effective problem-solving mindset and a lifelong passion for cybersecurity and technology, I'm part of cybersecurity domain from last 4 years and have a great experience in different fields of information security such as penetration testing, security analysis, red teaming and social engineering. I have been entrusted for handling the Vulnerability Assessment & Penetration Testing activities for the organization as well as of client projects.
 							</p><br>
 							<div class="text-mono">
-								<a href="#!" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-download mr-2"></span> Resume.pdf</a> &nbsp; &nbsp;
-								<a href="terminal/" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-terminal mr-2"></span> Terminal</a>
+								<a href="#!" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-download mr-2"></span> Resume.pdf</a> <a href="terminal/" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-terminal mr-2"></span> Terminal</a>
 							</div>
 						</div>
 					</div>
