--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <!-- Font -->
+    <link rel="stylesheet" type="text/css" href="font/RetroComputer.css"/>
     <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
@@ -46,13 +47,13 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h1 class="display-1" style="font-family: 'Source Code Pro', monospace;">Mr.SAG<span class="vim-caret">E</span></h1>
-							<div class="lead mb-3 text-mono text-success" style="font-family: 'Source Code Pro', monospace;">Security Enthusiast / Pentester / Developer</div>
-							<p class="mt-12 text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+							<h1 class="display-1" style="font-family:'RetroComputer';font-weight:normal;">Mr.SAG<span class="vim-caret">E</span></h1>
+							<div class="lead mb-3 text-mono text-success" style="font-family:'RetroComputer';font-weight:normal;">Security Enthusiast / Pentester / Developer</div>
+							<p class="mt-12 text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 								Hello, My name is Vipul and I'm a Cyber Security Researcher and Certified Ethical Hacker with an effective problem-solving mindset and a lifelong passion for cybersecurity and technology, I'm part of cybersecurity domain from last 4 years and have a great experience in different fields of information security such as penetration testing, security analysis, red teaming and social engineering. I have been entrusted for handling the Vulnerability Assessment & Penetration Testing activities for the organization as well as of client projects.
 							</p><br>
 							<div class="text-mono">
-								<a href="#!" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-download mr-2"></span> Resume.pdf</a> <a href="terminal/" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-terminal mr-2"></span> Terminal</a>
+								<a href="#!" class="btn btn-shadow text-mono btn-outline-success" style="font-family:'RetroComputer';font-weight:normal;"><span class="fa fa-download mr-2"></span> Resume.pdf</a> <a href="terminal/" target="_blank" class="btn btn-shadow text-mono btn-outline-success" style="font-family:'RetroComputer';font-weight:normal;"><span class="fa fa-terminal mr-2"></span> Terminal</a>
 							</div>
 						</div>
 					</div>
@@ -61,9 +62,9 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family: 'Source Code Pro', monospace;">What i do?</h4>
+							<h4 style="font-family:'RetroComputer';font-weight:normal;">What i do?</h4>
 							<p>
-								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 									<li>
 										Vulnerability Assessment
 									</li>
@@ -85,10 +86,10 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family: 'Source Code Pro', monospace;">Skills :</h4>
+							<h4 style="font-family:'RetroComputer';font-weight:normal;">Skills :</h4>
 
 							<p>
-								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 									<li>
 										Penetration Testing   
 									</li>
@@ -125,9 +126,9 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family: 'Source Code Pro', monospace;">Experience :</h4>
+							<h4 style="font-family:'RetroComputer';font-weight:normal;">Experience :</h4>
 							<p>
-								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 									<li>
 										<b>Hacktronian (Founder, Lead Trainer)</b><br>
 										<a href="https://hacktronian.in" target="_blank">https://hacktronian.in</a> | Oct. 2020 - Present<br>
@@ -152,9 +153,9 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family: 'Source Code Pro', monospace;">Certification :</h4>
+							<h4 style="font-family:'RetroComputer';font-weight:normal;">Certification :</h4>
 							<p>
-								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 									<li>
 										ICS-CISA : Operational Security for Control Systems, Differences in Deployments of ICS, Influence of Common IT Components on ICS, Common ICS Components, Cybersecurity within IT & ICS Domains, Cybersecurity Risk, Current Trends (Threat), Current Trends (Vulnerabilities), Determining the Impacts of a Cybersecurity Incident, Attack Methodologies in IT & ICS, Mapping IT Defense-in-Depth Security Solutions to ICS
 									</li><br>
@@ -188,9 +189,9 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family: 'Source Code Pro', monospace;">Education :</h4>
+							<h4 style="font-family:'RetroComputer';font-weight:normal;">Education :</h4>
 							<p>
-								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 									<li>
 										 B.Sc. Mathematics : Dr. Ram Manohar Lohia Avadh University, Ayodhya (2013 - 2016)
 									</li>
@@ -203,21 +204,21 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family: 'Source Code Pro', monospace;">My Projects :</h4><br>
+							<h4 style="font-family:'RetroComputer';font-weight:normal;">My Projects :</h4><br>
 							<div class="ht-tm-codeblock ht-tm-btn-replaceable ht-tm-needs-darkness">
 								<div class="row">
 									<div class="col-md-12">
-										<a href="https://github.com/thehackingsage/hacktronian" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Hacktronian</a>
-										<a href="https://github.com/thehackingsage/bughunter" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Bug Hunter</a>
-										<a href="https://github.com/thehackingsage/lightsaber" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Lightsaber</a>
-										<a href="https://github.com/thehackingsage/hackdroid" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Hackdroid</a>
-										<a href="https://github.com/thehackingsage/pwnphone" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Pwn Phone</a>
-										<a href="https://github.com/thehackingsage/hackpi" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Hack Pi</a>
-										<a href="https://github.com/thehackingsage/kali-wsl" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Kali WSL</a>
-										<a href="https://github.com/thehackingsage/torfi" target="_blank" class="btn btn-shadow text-mono btn-outline-success">Tor Fi</a>
+										<a href="https://github.com/thehackingsage/hacktronian" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">Hacktronian</a>
+										<a href="https://github.com/thehackingsage/bughunter" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">Bug Hunter</a>
+										<a href="https://github.com/thehackingsage/lightsaber" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">Lightsaber</a>
+										<a href="https://github.com/thehackingsage/hackdroid" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">Hackdroid</a>
+										<a href="https://github.com/thehackingsage/pwnphone" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">Pwn Phone</a>
+										<a href="https://github.com/thehackingsage/hackpi" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">Hack Pi</a>
+										<a href="https://github.com/thehackingsage/kali-wsl" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">Kali WSL</a>
+										<a href="https://github.com/thehackingsage/torfi" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">Tor Fi</a>
 									</div>
 								</div><br>
-								<p class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">Visit <a href="https://github.com/thehackingsage" target="_blank">https://github.com/thehackingsage</a> for More.</p>
+								<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">Visit <a href="https://github.com/thehackingsage" target="_blank">https://github.com/thehackingsage</a> for More.</p>
 							</div>
 						</div>
 					</div>
@@ -226,9 +227,9 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family: 'Source Code Pro', monospace;">Achievements :</h4>
+							<h4 style="font-family:'RetroComputer';font-weight:normal;">Achievements :</h4>
 							<p>
-								<ul class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 									<li>Judge - National Missing Persons Hackathon Australia 2020</li>
 									<li>Digital Credential from the Cisco Networking Academy</li>
 									<li>Contributed in SECARMY Village 2020</li>
@@ -251,17 +252,17 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family: 'Source Code Pro', monospace;">Activities :</h4><br>
+							<h4 style="font-family:'RetroComputer';font-weight:normal;">Activities :</h4><br>
 							<div class="ht-tm-codeblock ht-tm-btn-replaceable ht-tm-needs-darkness">
 								<div class="row">
 									<div class="col-md-12">
-										<a href="https://www.hackthebox.eu/profile/38608" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cube mr-2"></span> Hack The Box</a>
-										<a href="https://tryhackme.com/p/mr.sage" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cloud mr-2"></span> TryHackMe</a>
-										<a href="https://thehacktronian.blogspot.com/" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-newspaper-o mr-2"></span> Blogger</a>
-										<a href="https://youtube.com/hacktronian" target="_blank" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-youtube mr-2"></span> YouTube</a>
+										<a href="https://www.hackthebox.eu/profile/38608" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cube mr-2"></span> Hack The Box</a>
+										<a href="https://tryhackme.com/p/mr.sage" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-cloud mr-2"></span> TryHackMe</a>
+										<a href="https://thehacktronian.blogspot.com/" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-newspaper-o mr-2"></span> Blogger</a>
+										<a href="https://youtube.com/hacktronian" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success"><span class="fa fa-youtube mr-2"></span> YouTube</a>
 									</div>
 								</div><br>
-								<p class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">My Interests Are Mostly CTF and Web Designing.</p>
+								<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">My Interests Are Mostly CTF and Web Designing.</p>
 							</div>
 						</div>
 					</div>
@@ -270,8 +271,8 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family: 'Source Code Pro', monospace;">Contacts :</h4>
-							<p class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">
+							<h4 style="font-family:'RetroComputer';font-weight:normal;">Contacts :</h4>
+							<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 								<span class="fa fa-phone mr-2"></span> Phone : <a href="tel:+919044264043" target="_blank">+919044264043</a><br>
 								<span class="fa fa-envelope-o mr-2"></span> Email : <a href="mailto:thehackingsage@protonmail.com" target="_blank">thehackingsage@protonmail.com</a><br>
 								<span class="fa fa-share-alt mr-2"></span> Social Links : <a href="https://allmylinks.com/thehackingsage" target="_blank">allmylinks.com/thehackingsage</a>
@@ -291,7 +292,7 @@
 	</div>	
 
 	<div class="container py-5">
-		<p class="text-grey text-spacey" style="font-family: 'Source Code Pro', monospace;">© 2020 <a href="https://hacktronian.in" target="_blank">HACKTRONIAN</a></p>
+		<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">© 2020 <a href="https://bit.ly/thehackingsage" target="_blank">Mr.SAGE</a></p>
 	</div>
 
 	<!-- Script -->
