--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 										<a href="https://github.com/thehackingsage/torfi" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">Tor Fi</a>
 									</div>
 								</div><br>
-								<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">Visit <a href="https://github.com/thehackingsage" target="_blank">https://github.com/thehackingsage</a> for More.</p>
+								<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">Visit My <a href="https://github.com/thehackingsage" target="_blank">GitHub</a> Account for More.</p>
 							</div>
 						</div>
 					</div>
