--- a/index.html
+++ b/index.html
@@ -293,7 +293,10 @@
 	</div>	
 
 	<div class="container py-5">
-		<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">© 2020 <a href="https://hacktronian.in" target="_blank">HACKTRONIAN</a>  |  Made with &#10084; by <a href=\"https://github.com/thehackingsage" target="_blank">Mr.SAGE</a></p>
+		<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
+			© 2020 <a href="https://hacktronian.in" target="_blank">HACKTRONIAN</a> <br>
+			Made with &#10084; by <a href=\"https://github.com/thehackingsage" target="_blank">Mr.SAGE</a>
+		</p>
 	</div>
 
 	<!-- Script -->
