--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<h4 style="font-family:'RetroComputer';font-weight:normal;">My Projects :</h4><br>
+							<h4 style="font-family:'RetroComputer';font-weight:normal;">MY PROJECTS :</h4><br>
 							<div class="ht-tm-codeblock ht-tm-btn-replaceable ht-tm-needs-darkness">
 								<div class="row">
 									<div class="col-md-12">
