--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 	<div class="container py-5">
 		<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 			© 2020 <a href="https://hacktronian.in" target="_blank">HACKTRONIAN</a> <br>
-			MADE WITH &#10084; BY <a href=\"https://github.com/thehackingsage" target="_blank">Mr.SAGE</a>
+			MADE WITH &#10084; BY <a href="https://github.com/thehackingsage" target="_blank">Mr.SAGE</a>
 		</p>
 	</div>
 
