--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@
 
 	<div class="container py-5">
 		<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
-			© 2020 <a href="https://hacktronian.in" target="_blank">HACKTRONIAN</a> <br>
-			MADE WITH &#10084; BY <a href="https://github.com/thehackingsage" target="_blank">Mr.SAGE</a>
+			© 2021 <a href="https://hacktronian.in" target="_blank">HACKTRONIAN</a> BY <a href="https://github.com/thehackingsage" target="_blank">Mr.SAGE</a>
 		</p>
 	</div>
 
