--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								HELLO, MY NAME IS VIPUL TIWARI, ALSO KNOWN AS MR.SAGE. I'M A CYBERSECURITY ENTHUSIAST AND PENETRATION TESTER WITH AN EFFECTIVE PROBLEM-SOLVING MINDSET AND A LIFELONG PASSION FOR CYBERSECURITY AND TECHNOLOGY, I'M PART OF CYBERSECURITY DOMAIN FROM LAST 4 YEARS AND HAVE A GREAT EXPERIENCE IN DIFFERENT FIELDS OF INFORMATION SECURITY SUCH AS PENETRATION TESTING, SECURITY ANALYSIS, RED TEAMING AND SOCIAL ENGINEERING. I HAVE BEEN ENTRUSTED FOR HANDLING THE VULNERABILITY ASSESSMENT & PENETRATION TESTING ACTIVITIES FOR THE ORGANIZATION AS WELL AS OF CLIENT PROJECTS.
 							</p><br>
 							<div class="text-mono">
-								<a href="#!" class="btn btn-shadow text-mono btn-outline-success" style="font-family:'RetroComputer';font-weight:normal;"><span class="fa fa-download mr-2"></span> RESUME.pdf</a> <a href="https://hacktronian.in" target="_blank" class="btn btn-shadow text-mono btn-outline-success" style="font-family:'RetroComputer';font-weight:normal;"><span class="fa fa-terminal mr-2"></span> Hire Me</a>
+								<a href="#!" class="btn btn-shadow text-mono btn-outline-success" style="font-family:'RetroComputer';font-weight:normal;"><span class="fa fa-download mr-2"></span> RESUME.pdf</a> <a href="https://hacktronian.in" target="_blank" class="btn btn-shadow text-mono btn-outline-success" style="font-family:'RetroComputer';font-weight:normal;"><span class="fa fa-terminal mr-2"></span> HIRE ME</a>
 							</div>
 						</div>
 					</div>
