--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 									<li>
 										<b>HACKTRONIAN (FOUNDER, LEAD TRAINER)</b><br>
 										<a href="https://hacktronian.in" target="_blank">HTTPS://HACKTRONIAN.IN</a> | OCT. 2020 - PRESENT<br>
-										HACKTRONIAN IS AN ONLINE TRAINING PLATFORM WHICH MAINLY FOCUSES ON PROVIDING CYBERSECURITY EDUCATION AND RESOURCES FOR FREE.
+										HACKTRONIAN IS AN ONLINE TRAINING PLATFORM WHICH MAINLY FOCUSES ON PROVIDING CYBERSECURITY EDUCATION AND RESOURCES FOR FREE. WE ALSO PROVIDE CYBERSECURITY SERVICES AND SOLUTIONS.
 									</li><br>
 									<li>
 										<b>SECARMY (HEAD OF OPERATIONS & PROJECTS)</b><br>
@@ -169,7 +169,7 @@
 										EDX : INTRODUCTION TO LINUX, FUNDAMENTALS OF RED HAT ENTERPRISE LINUX
 									</li><br>
 									<li>
-										UDEMY : 50+ CYBER SECURITY CERTIFICATIONS
+										UDEMY : ANDROID ETHICAL HACKING COURSE, ANONYMITY GUIDE FOR ETHICAL HACKERS, AWS CERTIFIED CLOUD PRACTITIONER, BLACKARCH LINUX - ETHICAL HACKING & PENETRATION TESTING, CEH TEST PREPERATION, COMPLETE PHP FROM SCRATCH FOR BEGINNERS, COMPLETE SQL BOOTCAMP WITH MYSQL, PHP & PYTHON, CRYPTOGRAPHY, DEVOPS FUNDAMENTALS, DOCKER COURSE FOR BEGINNERS, ETHICAL HACKING - CAPTURE THE FLAG WALKTHROUGHS, ETHICAL HACKING - HANDS-ON TRAINING - PART I, GIT & GITHUB CRASH COURSE, GOOGLE ADSENSE & YOUTUBE, HACKING AND PENTESTING IOS APPLICATIONS (2020 EDITION), KALI LINUX 101, LEARNING TASK AUTOMATION USING WINDOWS POWERSHELL, LINUX SERVER ADMINISTRATION MADE EASY WITH HANDS-ON TRAINING, MASTER WIRESHARK 3 IN 5 DAYS, MICROSOFT WINDOWS 10 PRO - HANDS ON TRAINING, POWERSHELL SCRIPTING FOR BEGINNERS - WINDOWS SERVER 2016 MCSA, PYTHON - BASICS TO ADVANCE, REVERSE ENGINEERING .NET WITH DNSPY, REVERSE ENGINEERING 3- X64DBG GRAPHICAL STATIC ANALYSIS, SOCIAL MEDIA MARKITING, STEP BY STEP GUIDE TO MACHINE LEARNING, THE COMPLETE ANDROID APP DEVELOPMENT, THE COMPLETE ETHICAL HACKING COURSE, THE COMPLETE PYTHON HACKING COURSE BEGINNER TO ADVANCED, THE MACHINE LEARNING COURSE 2020, THE PHP COURSE 2020, WEB HACKING FOR BEGINNERS, WIFI HACKING COURSE' FULL WIFI HACKING ENCYCLOPEDIA ETC. (50+ CYBER SECURITY CERTIFICATIONS)
 									</li><br>
 									<li>
 										CYBRARY : PENETRATION TESTING AND ETHICAL HACKING, ADVANCED PENETRATION TESTING, COMPTIA A PLUS 901, COMPTIA NETWORK+, COMPTIA SECURITY+, COMPTIA CYSA+, SOCIAL ENGINEERING AND MANIPULATION, RISK MANAGEMENT FRAMEWORK
@@ -218,16 +218,16 @@
 								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 									<li>JUDGE - NATIONAL MISSING PERSONS HACKATHON AUSTRALIA 2020</li>
 									<li>DIGITAL CREDENTIAL FROM THE CISCO NETWORKING ACADEMY</li>
-									<li>CONTRIBUTED IN SECARMY VILLAGE 2020</li>
+									<li>EVENT ORGANISER : SECARMY VILLAGE 2020</li>
 									<li>HACKTOBERFEST 2020 SWAG</li>
-									<li>AEROSPACE WORKSHOPS DEF CON SWAG</li>
-									<li>CERTIFICATE OF APPRECIATION : DEF CON DELHI 0X03 SAFE MODE</li>
-									<li>CONTRIBUTED IN SARCON : SECARMY CONFERENCE 2020</li>
+									<li>AEROSPACE WORKSHOPS DEFCON SWAG</li>
+									<li>CERTIFICATE OF APPRECIATION : DEFCON DELHI 0X03 SAFE MODE</li>
+									<li>EVENT ORGANISER : SARCON (SECARMY CONFERENCE) 2020</li>
 									<li>CERTIFICATE OF APPRECIATION : LPU CYBER HACK VILLAGE 2.0</li>
 									<li>BUGCROWD SWAG</li>
 									<li>CONTRIBUTED IN 20+ CTF EVENTS</li>
 									<li>BUG DISCOVER SWAG</li>
-									<li>PARTICIPATED IN MORE THAN 50 SECURITY SEMINAR AND CONFERENCE</li>
+									<li>PARTICIPATED IN MORE THAN 50 SECURITY SEMINARS AND CONFERENCES</li>
 								</ul>
 							</p>
 						</div>
@@ -260,7 +260,7 @@
 							<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 								<span class="fa fa-whatsapp mr-2"></span> WHATSAPP : <a href="https://wa.me/+919044264043" target="_blank">+919044264043</a><br>
 								<span class="fa fa-envelope-o mr-2"></span> EMAIL : <a href="mailto:thehackingsage@protonmail.com" target="_blank">THEHACKINGSAGE@PROTONMAIL.COM</a><br>
-								<span class="fa fa-share-alt mr-2"></span> SOCIAL LINKS : <a href="https://allmylinks.com/thehackingsage" target="_blank">ALLMYLINKS.COM/THEHACKINGSAGE</a>
+								<span class="fa fa-share-alt mr-2"></span> SOCIAL LINKS : <a href="https://linktr.ee/thehackingsage" target="_blank">LINKTR.EE/THEHACKINGSAGE</a>
 							</p><br>
 							<p>
 								<a href="https://instagram.com/thehackingsage" target="_blank" class="btn btn-outline-success"><span class="fa fa-instagram"></span></a> &nbsp; &nbsp;
@@ -280,7 +280,7 @@
 
 	<div class="container py-5">
 		<p class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
-			© 2021 <a href="https://hacktronian.in" target="_blank">HACKTRONIAN</a> BY <a href="https://github.com/thehackingsage" target="_blank">Mr.SAGE</a>
+			© 2020 <a href="https://hacktronian.in" target="_blank">HACKTRONIAN</a> BY <a href="https://github.com/thehackingsage" target="_blank">Mr.SAGE</a>
 		</p>
 	</div>
 
