--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Font -->
     <link rel="stylesheet" type="text/css" href="font/RetroComputer.css"/>
-    <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/hack-font/2.020/webfonts/css/hack.min.css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
@@ -132,17 +132,17 @@
 							<p>
 								<ul class="text-grey text-spacey" style="font-family:'RetroComputer';font-weight:normal;">
 									<li>
-										<b>HACKTRONIAN (FOUNDER, LEAD TRAINER)</b><br>
+										HACKTRONIAN (FOUNDER, LEAD TRAINER)<br>
 										<a href="https://hacktronian.in" target="_blank">HTTPS://HACKTRONIAN.IN</a> | OCT. 2020 - PRESENT<br>
 										HACKTRONIAN IS AN ONLINE TRAINING PLATFORM WHICH MAINLY FOCUSES ON PROVIDING CYBERSECURITY EDUCATION AND RESOURCES FOR FREE. WE ALSO PROVIDE CYBERSECURITY SERVICES AND SOLUTIONS.
 									</li><br>
 									<li>
-										<b>SECARMY (HEAD OF OPERATIONS & PROJECTS)</b><br>
+										SECARMY (HEAD OF OPERATIONS & PROJECTS)<br>
 										<a href="https://secarmy.org" target="_blank">HTTPS://SECARMY.ORG</a> | JAN. 2019 - OCT. 2020<br>
 										SECARMY IS AN INDIAN ORIGIN AGILE AND COLLECTIVE INTELLIGENCE FOCUSED COMMUNITY FULL OF ENTHUSIASTS FROM VARIOUS DIVERSE DOMAINS OF INFORMATION SECURITY STRIVING THEIR BEST TO MAKE A CHANGE THROUGH VARIOUS OPEN SOURCE ACTIVITIES LIKE CAPTURE THE FLAG (CTF), PODCASTS, BLOGS AND VARIOUS SESSIONS OR WEBCASTS.
 									</li><br>
 									<li>
-										<b>SELF-EMPLOYED (FREELANCER)</b><br>
+										SELF-EMPLOYED (FREELANCER)<br>
 										<a href="http://bit.ly/thehackingsage" target="_blank">BIT.LY/THEHACKINGSAGE</a> | OCT. 2016 - PRESENT<br>
 										IN 2016, I STARTED WORKING AS A FREELANCER IN WHICH I USED TO PROVIDE SERVICES RELATED TO CYBER SECURITY (SECURITY AUDIT, VULNERABILITY ASSESSMENT AND PENETRATION TESTING) & WEB DEVELOPMENT (WEB DESIGNING, MAKEOVER AND SEO).
 									</li>
@@ -199,7 +199,6 @@
 										<a href="https://github.com/thehackingsage/bughunter" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">BUG HUNTER</a>
 										<a href="https://github.com/thehackingsage/lightsaber" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">LIGHTSABER</a>
 										<a href="https://github.com/thehackingsage/hackdroid" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">HACKDROID</a>
-										<br>
 										<a href="https://github.com/thehackingsage/pwnphone" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">PWN PHONE</a>
 										<a href="https://github.com/thehackingsage/hackpi" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">HACK PI</a>
 										<a href="https://github.com/thehackingsage/kali-wsl" target="_blank" style="font-family:'RetroComputer';font-weight:normal;" class="btn btn-shadow text-mono btn-outline-success">KALI WSL</a>
